kubernetes/apps/automation/n8n/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "n8n"
    gethomepage.dev/description: "No-code/low-code workflow automation"
    gethomepage.dev/group: "Automation"
    gethomepage.dev/icon: "n8n"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "n8n.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
